--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,12 +21,6 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731926.md#1" target="_blank">袁斌：复旦改章程 中共撕下大学的遮羞布</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731926.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-600x400-1-150x120.jpg" align ="left"></a>今天一则复旦学生唱校歌的视频在微信群里火了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731215.md#1" target="_blank">赖锦东：从信仰高度看中美贸易战</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/caifu-150x120.jpg" align ="left"></a>政教分离是指政府与教会的分立，各司其职、各负其责。但是，政教分离绝不是政治与信仰的分离，相反，政治当顺服于信仰，政治的价值观根植于信仰之中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731417.md#1" target="_blank">夏小强：中共官方为何修改复旦大学章程？</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731417.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/363985048_a1a0fae674_b-150x120.jpg" align ="left"></a>那么，中共为什么还要多此一举修改高校校章？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736929.md#1" target="_blank">伍新： 习近平赌城赌气行</a><br></h3>澳门庆典又摆阔，万马千军护一桌。
-场似访朝当外宾，阵如戒严防刺客。
-海关路口堵异议，全城近瘫多停业。
-主席鼻近五味瓶，八成冲喜疏窝火。
-加浓染红予示范，反引港台起警觉。
-千人一口唾共蛇，抗暴港旗宣天灭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736915.md#1" target="_blank">吐为快：党为何凌蹈一切？</a><br></h3>隔府操纵费周章，独擅其美快魔肠
 顾盼自雄朝堂上，奴才嬖臣环绕忙
 一掷千金乐友邦，万众翘首颂太阳
@@ -70,5 +64,6 @@
 面对新闻多想想
 x党专骗老百姓......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/19/n11731471.md#1" target="_blank">王赫：中共首艘自制航母入列日期的玄机</a><br></h3>12月17日，舷号为17的中共第一艘国产航空母舰山东舰在海南省三亚军港入列，习近平出席仪式、授旗。这有一个“巧合”：历史上的今天，1888年12月17日（清光绪十四年冬月十五），北洋水师于山东威海卫刘公岛正式成立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:42 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731117.md#1" target="_blank">张林：毛泽东靠什么为所欲为？</a><br></h3>毛泽东本来是苏联独裁者史达林扶植的儿皇帝，但是他的管理共产党的手段，与苏联人主要依靠制度，有很大的不同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
