--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/synhl2788/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/synhl2788/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/synhl2788/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/synhl2788/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737558.md#1" target="_blank">【新闻看点】太空兵出世 美首创新兵种的背后</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737558.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e28a3eba7f0e2e_ttl7dayfm3_DSC09345-150x120.jpg" align ="left"></a>12月20日，川普签署国防法案，美国又创立了一个70年以来的新兵种。美国这个具有里程碑意义的历史动作，引起了各方的高度关注......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 5:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737505.md#1" target="_blank">俞正声、俞强声亲属文革时被迫害死六七人</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fc0a04d04d9e0fb6aeb30304ca0976f7-150x120.jpg" align ="left"></a>中共间谍王立强投奔自由社会后，此前出逃美国的中共最大间谍俞强声再次受到外界关注。他家人在文革时曾遭到中共当局残酷迫害，母亲被关进监狱、妹妹被迫害致死等往事，再次被提起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737625.md#1" target="_blank">《自然》十大科学家 揭中共强摘器官者入列</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/CFP484019019-150x120.jpg" align ="left"></a>《自然》杂志网站发表2019年对科学最具影响力的十大科学家，其中包括找出新方法，揭露中国（中共）政府从事非法器官移植的温蒂·罗杰斯（Wendy Rogers）教授。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11734996.md#1" target="_blank">法轮功学员高一喜十天“猝死”的背后</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11734996.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/09bd549098904386f4154bde36534cce-150x120.png" align ="left"></a>牡丹江市法轮功学员高一喜于2016年4月19日晚在家遭警察绑架，10天后“猝死”。当天下午，数十名特警、武警、公安、“610”人员聚集火葬场，不顾家属的强烈反对，强行解剖尸体，取走高一喜的所有器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank">陆童星培训藏陷阱 试镜背后是数万培训费</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-494964966-150x120.jpg" align ="left"></a>“15万就白扔了，这件事情绝对是我这辈子办得最憋屈、最丢脸的事情了。”安安妈妈一提起在女儿小时候偶遇“星探”，进而交培训费的经历，就懊悔不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737343.md#1" target="_blank">控制核武 川普政府正式邀北京开始军备会谈</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737343.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1781184-1-150x120.jpg" align ="left"></a>美国川普（特朗普）政府周五（12月20日）表示，已正式邀请中国（中共）开启军备控制会谈。白宫希望，这是涵盖美国、俄罗斯和中国三方核武器协议的第一步。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank">马云卸任后 在湖北获“新职”</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/181212095028100484-150x120.jpg" align ="left"></a>马云卸任阿里巴巴董事局主席后，日前获得中共湖北省政府“经济顾问”的头衔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 12:26 AM							</td></tr>
@@ -17,10 +21,7 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736584.md#1" target="_blank">安徽青年离奇溺毙 警方不立案 家属讨真相</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9603-150x120.jpg" align ="left"></a>安徽怀化市青年任政权在江苏苏州打工，7月中旬辞职，回家前到浙江湖州市要回借给朋友刘虹（音）的钱作为路费，结果离奇溺死在河道中，警方至今不立案，其母亲郭女士讨真相无门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736359.md#1" target="_blank">再现负增长 大陆11月地方预算收入减少1.1%</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/07/1107160405152320-150x120.jpg" align ="left"></a>最新的数据显示，中国11月份地方一般公共预算收入同比下降1.1%，这是今年地方一般公共预算第二次出现负增长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736211.md#1" target="_blank">仿效香港抗争 网民发起非暴力罢用微信行动</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-478009091-150x120.jpg" align ="left"></a>圣诞节临近，中共要求中国人从网络到社区不过圣诞节，而网友则发起“圣诞快乐，抵制微信”的全民非暴力行动试水。网友们相约在12月25日一起来做一件事：圣诞节这一天，不登录、不支付。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736367.md#1" target="_blank">台湾大选倒数3周 美国立法反制中共介入</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204448-150x120.jpg" align ="left"></a>台湾2020总统大选是一场台湾人捍卫主权与民主自由体制的保卫战。美国参众两院授权情报机构反制中国（中共）干预台湾选举的行动。本周六国民党统总候选人韩国瑜大本营高雄同时迎来挺韩、罢韩两场大游行。美国驻台官方机构罕见高调向美国公民发出安全警讯，台湾总统蔡英文亦于脸书呼吁民众理性、和平地表达诉求，避免冲突发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731126.md#1" target="_blank">【名家专栏】中共一胎化警示集体主义之邪恶</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/18/n11731126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1312311127531528-150x120.jpg" align ="left"></a>今年，中共最骇人的“一胎化”公共政策已迈入40周年。幸运的是，《独生之国》这部新纪录片，揭开了这个残酷计划40年来的阴暗面纱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:26 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736488.md#1" target="_blank">客机降香港遭拒 传中共军机拦截要求远离澳门</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N57V5-600x400-1-150x120.jpg" align ="left"></a>习近平访澳门期间，澳门安保措施极其严密。有消息说，日前一架由日本飞往印尼的私人客机发生故障，要求降落香港遭到拒绝，中共军方甚至派出两架军机拦截，要求客机与澳门保持100公里距离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank">高校频爆丑闻 清华被曝出骗子北大出流氓</a><br></h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zgzj-150x120.jpg" align ="left"></a>清华、北大是大陆最顶尖的学府，但仅在今年以来，这两所大学的丑闻频发。多名清华EMBA毕业生被曝涉嫌诈骗，而北大几名教师涉嫌性丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737459.md#1" target="_blank">超时加班和抑郁 长安福特30岁工程师跳楼亡</a><br></h3>12月20日，一条题为《长安福特AE工程师之死》的文章在网上广泛传播。文章作者称自己的丈夫邓某某为长安福特汽车有限公司一名工程师，入职8年，由于工作压力大，持续加班患上抑郁症，年仅30岁抑郁跳楼身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736394.md#1" target="_blank">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br></h3>澳门主权移交20周年，19日晚在东亚运动会体育馆举行文艺晚会，香港特首林郑月娥同丈夫林兆波都有出席。现场播放《歌唱祖国》时，当全场高歌拍掌时，唯独林兆波木然站立不配合的一幕引发各界热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11737039.md#1" target="_blank">郴州电视台台长与政法委书记联手敛财</a><br></h3>中共湖南省郴州市广播电视台前台长张春阳被指与亲家、前政法委书记刘志伟合谋敛财，共涉金额数百万元人民币。日前，张春阳案开庭审理。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736993.md#1" target="_blank">吉林载37人巴士侧滑坠江 6人死亡</a><br></h3>12月21日，吉林通化市一辆载有39人的巴士在江边发生侧滑，造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 5:43 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736910.md#1" target="_blank">工作人员在陕西兵马俑坑内洒水引网友热议</a><br></h3>近日,大陆网络上流传出多名工作人员在陕西秦始皇兵马俑景区内洒水，许多网友质疑是破坏文物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736771.md#1" target="_blank">四川轻化工大学副教授因言受罚</a><br></h3>中国大专院校学术自由空间持续萎缩。四川轻化工大学副教授李志被指发表不当言论，违反了高校教师准则，近期受到校方行政处罚，并被调离其所任职的马克思主义学院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/21/n11736741.md#1" target="_blank">题材敏感？《一级指控》疑遭中方施压禁上映</a><br></h3>港产片《一级指控》因题材涉指控官商勾结，疑因遭到中方压力，原订于今日（12月21日）起一连三日在港K11 Art House戏院上映的优先场突然被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/19/12/20/n11736026.md#1" target="_blank">大连Logo头奖疑抄迪士尼 网民：胆子真大</a><br></h3>大连最近举办首届大连文化创意和旅游纪念品大赛，并征选“大连城市Logo”，日前发布了得奖作品，但被发现得奖的“大连城市Logo”有多处抄袭嫌疑，引起热议。有网民说，“设计师胆真大，评委都是打酱油的吧？”“这评的是看谁最敢抄吗？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/synhl2788/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/synhl2788/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/synhl2788/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
